add reset password & email verification
